@@ -1,20 +1,29 @@
 package com.nomorelaps.adapters.in.rest;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
@@ -25,95 +34,111 @@ import com.nomorelaps.adapters.in.api.UserRequest;
 import com.nomorelaps.adapters.mapper.UserMapper;
 import com.nomorelaps.business.interfaces.IUserService;
 import com.nomorelaps.domain.models.User;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
 
 /**
  * Integration tests for UserController.
- *
+ * Verifies user management operations including CRUD, search by email, and password changes.
+ * 
  * @author nexphernandez
- * @version 1.0.0
+ * @version 1.1.0
  */
 @SpringBootTest
-@AutoConfigureMockMvc
+@AutoConfigureMockMvc(addFilters = false)
 class UserControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
-    private IUserService userService;
-
-    @Autowired
-    private UserMapper userMapper;
-
     @Autowired
     private ObjectMapper objectMapper;
 
+    @MockitoBean
+    private IUserService userService;
+
+    @MockitoSpyBean
+    private UserMapper userMapper;
+
+    private UserRequest validRequest;
+    private User sampleUser;
+
+    @BeforeEach
+    void setUp() {
+        validRequest = new UserRequest();
+        validRequest.setName("John Doe");
+        validRequest.setEmail("john@example.com");
+        validRequest.setPassword("securePass123");
+
+        sampleUser = new User(1L);
+        sampleUser.setName("John Doe");
+        sampleUser.setEmail("john@example.com");
+    }
+
     @Test
-    @DisplayName("GET /api/users - Should return list of users (requires ADMIN)")
+    @DisplayName("GET /api/users - Success: Should return list of all users")
     @WithMockUser(roles = "ADMIN")
-    void shouldReturnAllUsers() throws Exception {
-        User u1 = new User(1L);
-        u1.setName("Alice");
-        User u2 = new User(2L);
-        u2.setName("Bob");
-        when(userService.findAll()).thenReturn(Arrays.asList(u1, u2));
+    void shouldReturnAllUsersSuccessfully() throws Exception {
+        when(userService.findAll()).thenReturn(List.of(sampleUser));
 
         mockMvc.perform(get("/api/users"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()").value(2));
+                .andExpect(jsonPath("$[0].name").value("John Doe"));
     }
 
     @Test
-    @DisplayName("GET /api/users/{id} - Found")
+    @DisplayName("GET /api/users/{id} - Success: Should return user details")
     @WithMockUser
-    void shouldReturnUserById() throws Exception {
-        User user = new User(1L);
-        user.setName("Alice");
-        user.setEmail("alice@test.com");
-        when(userService.findById(1L)).thenReturn(Optional.of(user));
+    void shouldReturnUserByIdSuccessfully() throws Exception {
+        when(userService.findById(1L)).thenReturn(Optional.of(sampleUser));
 
         mockMvc.perform(get("/api/users/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.email").value("john@example.com"));
     }
 
     @Test
-    @DisplayName("GET /api/users/{id} - Not Found")
+    @DisplayName("GET /api/users/email/{email} - Success: Should return user details")
     @WithMockUser
-    void shouldReturn404WhenUserNotFound() throws Exception {
-        when(userService.findById(99L)).thenReturn(Optional.empty());
+    void shouldReturnUserByEmailSuccessfully() throws Exception {
+        when(userService.findByEmail("john@example.com")).thenReturn(Optional.of(sampleUser));
 
-        mockMvc.perform(get("/api/users/99"))
-                .andExpect(status().isNotFound());
+        mockMvc.perform(get("/api/users/email/john@example.com"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.email").value("john@example.com"));
     }
 
     @Test
-    @DisplayName("POST /api/users - Created")
+    @DisplayName("POST /api/users - Success: Should create user")
     @WithMockUser
-    void shouldCreateUser() throws Exception {
-        UserRequest request = new UserRequest();
-        request.setName("Charlie");
-        request.setEmail("charlie@test.com");
-        request.setPassword("securePass");
-
-        User saved = new User(3L);
-        saved.setName("Charlie");
-        when(userService.create(any(User.class))).thenReturn(saved);
+    void shouldCreateUserSuccessfully() throws Exception {
+        when(userService.create(any(User.class))).thenReturn(sampleUser);
 
         mockMvc.perform(post("/api/users")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
+                .content(objectMapper.writeValueAsString(validRequest)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(3));
+                .andExpect(jsonPath("$.id").value(1L));
     }
 
     @Test
-    @DisplayName("DELETE /api/users/{id} - No Content")
+    @DisplayName("PUT /api/users/{id} - Success: Should update user")
     @WithMockUser
-    void shouldDeleteUser() throws Exception {
+    void shouldUpdateUserSuccessfully() throws Exception {
+        sampleUser.setName("John Updated");
+        when(userService.update(any(User.class))).thenReturn(sampleUser);
+
+        mockMvc.perform(put("/api/users/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(validRequest)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value("John Updated"));
+    }
+
+    @Test
+    @DisplayName("DELETE /api/users/{id} - Success: Should return 204")
+    @WithMockUser
+    void shouldDeleteUserSuccessfully() throws Exception {
         doNothing().when(userService).deleteById(1L);
 
         mockMvc.perform(delete("/api/users/1"))
@@ -121,52 +146,9 @@ class UserControllerTest {
     }
 
     @Test
-    @DisplayName("GET /api/users/email/{email} - Found")
+    @DisplayName("PATCH /api/users/{id}/change-password - Success: Should call service")
     @WithMockUser
-    void shouldReturnUserByEmail() throws Exception {
-        User user = new User(1L);
-        user.setEmail("alice@test.com");
-        when(userService.findByEmail("alice@test.com")).thenReturn(Optional.of(user));
-
-        mockMvc.perform(get("/api/users/email/alice@test.com"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.email").value("alice@test.com"));
-    }
-
-    @Test
-    @DisplayName("GET /api/users/email/{email} - Not Found")
-    @WithMockUser
-    void shouldReturn404WhenUserEmailNotFound() throws Exception {
-        when(userService.findByEmail("none@test.com")).thenReturn(Optional.empty());
-
-        mockMvc.perform(get("/api/users/email/none@test.com"))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    @DisplayName("PUT /api/users/{id} - Updated")
-    @WithMockUser
-    void shouldUpdateUser() throws Exception {
-        UserRequest request = new UserRequest();
-        request.setName("Alice Updated");
-        request.setEmail("alice@test.com");
-        request.setPassword("newPass");
-
-        User updated = new User(1L);
-        updated.setName("Alice Updated");
-        when(userService.update(any(User.class))).thenReturn(updated);
-
-        mockMvc.perform(put("/api/users/1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Alice Updated"));
-    }
-
-    @Test
-    @DisplayName("PATCH /api/users/{id}/change-password - Success")
-    @WithMockUser
-    void shouldChangePassword() throws Exception {
+    void shouldChangePasswordSuccessfully() throws Exception {
         ChangePasswordRequest request = new ChangePasswordRequest();
         request.setCurrentPassword("oldPass123");
         request.setNewPassword("newPass123");
@@ -179,4 +161,3 @@ class UserControllerTest {
                 .andExpect(status().isOk());
     }
 }
-
